# como_estruturar_projeto_do_zero

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
anotacoes/: index.html
docs/: Guia de Estruturação de Projetos Python.md  anotacoes.md  index.md
search/: search_index.json
src/infrastructure/data/: main.py
src/infrastructure/data/output/: output_etl.xlsx
src/infrastructure/data/pipeline/: extract.py  load.py  main.py  transform.py
tests/: test_pipeline.py
