[tool.poetry]
name = "como-estruturar-projeto-do-zero"
version = "0.1.0"
description = "Como estruturar projeto de ETL"
authors = ["joaobarreto27 <joao.vito1951@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.3.1"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"