[tool.poetry]
name = "como-estruturar-projeto-do-zero"
version = "0.1.0"
description = "Como estruturar projeto de ETL"
authors = ["joaobarreto27 <joao.vito1951@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
pytest = "^8.4.1"
isort = "^6.0.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.9.0"
taskipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort . && black ."